[tool.poetry]
name = "mlpp-lib"
version = "0.12.2"
description = "Collection of methods for ML-based postprocessing of weather forecasts."
authors = ["Daniele Nerini <daniele.nerini@meteoswiss.ch>"]
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
numpy = "^1.22.1"
tensorflow = {version = "~2.12.1", optional = true}
tensorflow-cpu = {version = "~2.12.1", optional = true}
tensorflow-probability = "~0.20.0"
pandas = "^1.4.1"
scipy = "^1.8.0"
xarray = "^2022.3.0"
dask = "^2022.6.0"
properscoring = "^0.1"
numba = {version = "^0.56.4", optional = true}
zarr = {version = "^2.14.1", optional = true}

[tool.poetry.extras]
tensorflow = ["tensorflow"]
tensorflow-cpu = ["tensorflow-cpu"]
extended = ["zarr", "numba", "tensorflow"]

[tool.poetry.group.dev.dependencies]
tensorflow = "~2.12.1"
pytest = "^7"
black = "^22.1.0"
mlflow = "^2.8.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
