[tool.poetry]
name = "mlpp-lib"
version = "0.13.0"
description = "Collection of methods for ML-based postprocessing of weather forecasts."
authors = ["Daniele Nerini <daniele.nerini@meteoswiss.ch>"]
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
numpy = "*"
tensorflow = {version = "~2.16.1", optional = true}
tensorflow-cpu = {version = "~2.16.1", optional = true}
tensorflow-probability = "~0.24.0"
tf-keras = "~2.16.0"
pandas = "*"
scipy = "*"
xarray = "*"
dask = "*"
properscoring = "^0.1"
numba = {version = "*", optional = true}
zarr = {version = "*", optional = true}

[tool.poetry.extras]
tensorflow = ["tensorflow"]
tensorflow-cpu = ["tensorflow-cpu"]
extended = ["zarr", "numba", "tensorflow"]

[tool.poetry.group.dev.dependencies]
tensorflow = "~2.16.1"
pytest = "^7"
black = "^22.1.0"
mlflow = "^2.8.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
